--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6 Jun 1999</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Date of birth:</strong> <span>6 Jun 1999</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Linhtran01883034670@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+84 834574768</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ninh Kieu, Can Tho,Viet Nam</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Ninh Kieu, Can Tho,Viet Nam</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
