--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
             <h4>Junior Mobile Developer</h4>
             <h5>2021 - Present</h5>
             <p><em>HAHALOLO SOCIAL NETWORK AND TOURISM JOINT STOCK COMPANY</em></p>
+            <p><em>Android Developer</em></p>
             <p>
             <ul>
               <li>Preparing documents for products.</li>
