--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1><a href="index.html">Tran Nhat Linh</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-      <h2>I'm a <span>mobile developer enthusiast</span> from Can Tho</h2>
+      <h2>I'm a <span>programmer and tester</span> from Can Tho</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,7 +84,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Date of birth:</strong> <span>6 Jun 1999</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Date of birth:</strong> <span>Jun 6 1999</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Linhtran01883034670@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+84 834574768</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Ninh Kieu, Can Tho,Viet Nam</span></li>
@@ -94,14 +94,15 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bechelor</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
               </ul>
             </div>
           </div>
           <p>
             I hope to work in a professional programming environment, where I can develop professional skills, learn new programming knowledge to successfully , complete the assigned work. My goal is to become a professional programmer who has
             the ability to program many languages for software. In the future, I hope to become a manager in charge of a complete project.Constantly learning to cultivate knowledge about programming to develop professional skills. In the next year,
-            I will become a professional Android programmer, learnmore IOS programming and improve testing skill.
+            I will become a professional Android programmer, learnmore IOS programming and improve testing skill.</p>
+          <p>In the near future , I will try to perfect every skill I have step by step . I will become more mature on the career path that I have wanted</p>
       </div>
 
     </div><!-- End About Me -->
@@ -179,7 +180,7 @@
             </div>
           </div>
           <div class="progress">
-            <span class="skill">PHP <i class="val">60%</i></span>
+            <span class="skill">Basic English communication <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -190,27 +191,27 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Flutter <i class="val">55%</i></span>
+            <span class="skill">Teamwork skill<i class="val">65%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">Flutter <i class="val">55%</i></span>
+            <span class="skill">Framework Flutter <i class="val">55%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">React Native <i class="val">45%</i></span>
+            <span class="skill">Framework React Native <i class="val">45%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">C# <i class="val">45%</i></span>
+            <span class="skill">Research skill<i class="val">45%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -278,29 +279,29 @@
             <h3>Studing</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        <!-- <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-anchor-line" style="color: #b2904f;"></i>
             <h3>Writing diary</h3>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        </div> -->
+        <!-- <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-disc-line" style="color: #b20969;"></i>
             <h3>Listening to music</h3>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        </div> -->
+        <!-- <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-gradienter-line" style="color: #ff5828;"></i>
             <h3>Planting a tree</h3>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        </div> -->
+        <!-- <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
             <h3>Going fishing</h3>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -599,7 +600,7 @@
               <p>App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://play.google.com/store/apps/details?id=com.hahalolo.android.halome&hl=en" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details-app-1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -613,7 +614,7 @@
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details-web-1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -627,7 +628,7 @@
               <p>App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details-app-1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
